# nv_nano_gas_detector_ros

./: CMakeLists.txt  README.md  package.xml
include/: uart.h
launch/: gas_detect_node.launch
msg/: gas_detect.msg
src/: gas_detect_driver_main.cpp  uart.c
