<?xml version="1.0"?>
<package>
  <name>gas_detect_driver_node</name>
  <version>0.0.0</version>
  <description>The Gas Detector Driver Node</description>

  <maintainer email="fmascarich@nevada.unr.edu">frank</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>